# csp6-IPD-19-20

./: example0.py  example1.py  example2.py  example3.py  pyproject.toml  team8.py  tournament.txt
