[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["TheOneandOnly-Mr-E <aaronjsmith2021@gmail.com>"]
description = ""
name = "csp6-ipd-19-27"
version = "0.1.0"
[tool.poetry.dependencies]
pd = "^0.0.1"
python = "^3.7"
[tool.poetry.dev-dependencies]
